--- a/payment_test.html
+++ b/payment_test.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
 </head>
 <body>
-	<form method="post" action="http://127.0.0.1/api/payment/callback">
+	<form method="post" action="http://olive.localhost/api/payment/callback">
 		<input type="text" name="merchant_oid" placeholder="merchant_oid" />
 		<br />
 		<input type="text" name="status" placeholder="status" />
